%% Diagrama de Classes — Subsistema de Autenticacao
%% Backend MobiFix (ASP.NET Core 8 / C#)
%% Referencia: Projeto-MobiFix/Backend/{Controllers,Services,Models}/Auth
%%
%% Convencoes UML aplicadas:
%%   +  publico        -  privado        #  protegido
%%   ..|>  realizacao (dashed + triangulo oco)
%%   ..>   dependencia (dashed + seta aberta)
%%   *--   composicao  (losango cheio)
%%   -->   associacao  (seta aberta)
%%
%% Classes marcadas <<external>> pertencem a outros subsistemas
%% (definicao completa no respetivo diagrama) e estao presentes
%% aqui apenas para explicitar as dependencias.

classDiagram
    direction LR

    class AuthController {
        <<controller>>
        -_authService : IAuthService
        +AuthController(authService : IAuthService)
        +LoginFuncionario(loginDto : FuncionarioLoginDto) Task~IActionResult~
        +Registar(registoDto : ClienteRegistoDto) Task~IActionResult~
        +Login(loginDto : ClienteLoginDto) Task~IActionResult~
    }

    class IAuthService {
        <<interface>>
        +LoginFuncionarioAsync(loginDto : FuncionarioLoginDto) Task~string?~
        +LoginClienteAsync(loginDto : ClienteLoginDto) Task~string?~
        +RegistarClienteAsync(registoDto : ClienteRegistoDto) Task~bool~
    }

    class AuthService {
        <<service>>
        -_httpClient : HttpClient
        -_configuration : IConfiguration
        +AuthService(httpClient : HttpClient, configuration : IConfiguration)
        +LoginFuncionarioAsync(loginDto : FuncionarioLoginDto) Task~string?~
        +LoginClienteAsync(loginDto : ClienteLoginDto) Task~string?~
        +RegistarClienteAsync(registoDto : ClienteRegistoDto) Task~bool~
        -GerarTokenFuncionario(funcionario : FuncionarioDto) string
        -GerarTokenCliente(cliente : ClienteDto) string
    }

    class ClienteLoginDto {
        <<DTO>>
        +NIF : string
        +Password : string
    }

    class ClienteRegistoDto {
        <<DTO>>
        +Nome : string
        +Email : string
        +Morada : string
        +NIF : string
        +Telefone : string
        +Password : string
    }

    class FuncionarioLoginDto {
        <<DTO>>
        +NumeroMecanografico : string
        +Password : string
    }

    class FuncionarioDto {
        <<external>>
    }

    class ClienteDto {
        <<external>>
    }

    AuthService       ..|> IAuthService         : realiza
    AuthController    ..>  IAuthService         : injeta
    AuthController    ..>  FuncionarioLoginDto  : consome
    AuthController    ..>  ClienteLoginDto      : consome
    AuthController    ..>  ClienteRegistoDto    : consome
    IAuthService      ..>  FuncionarioLoginDto
    IAuthService      ..>  ClienteLoginDto
    IAuthService      ..>  ClienteRegistoDto
    AuthService       ..>  FuncionarioDto       : obtem via HTTP
    AuthService       ..>  ClienteDto           : obtem via HTTP
